Bug#8983 one place that isn't strict-aliasing-safe  - Backport fix from 5.0